feat:addition of some routes
