# controllers/teamController.js
@@ -206,8 +206,9 @@ export const deleteTeam = async (req, res, next) => {
 export const updateTeam = async (req, res, next) => {
   try {
     const id = req.params.id;
-    const team = await Team.findById(id);
+    let team = await Team.findById(id);
     if (!team) return res.status(404).json({ message: 'Team not found' });
+    console.log(req.body)
     team = await Team.findByIdAndUpdate(id, req.body);
     res.status(200).json({success:true,message:"Team Successfully updated",team });  
   } catch (error) {
